versioned_docs/version-1.2/danklinux/index.mdx
---
title: DankLinux Repository
description: Pre-built packages for Fedora, CentOS, Debian, Ubuntu, and OpenSUSE
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗  █████╗ ███╗   ██╗██╗  ██╗██╗     ██╗███╗   ██╗██╗   ██╗██╗  ██╗
██╔══██╗██╔══██╗████╗  ██║██║ ██╔╝██║     ██║████╗  ██║██║   ██║╚██╗██╔╝
██║  ██║███████║██╔██╗ ██║█████╔╝ ██║     ██║██╔██╗ ██║██║   ██║ ╚███╔╝ 
██║  ██║██╔══██║██║╚██╗██║██╔═██╗ ██║     ██║██║╚██╗██║██║   ██║ ██╔██╗ 
██████╔╝██║  ██║██║ ╚████║██║  ██╗███████╗██║██║ ╚████║╚██████╔╝██╔╝ ██╗
╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝╚══════╝╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚═╝  ╚═╝`}
  hideTitle={true}
/>

## Overview

The **DankLinux Repository** provides pre-built packages for **DankMaterialShell** and **niri**! \
DankMaterialShell is now available on more distributions than ever before!

- [**Fedora**](https://fedoraproject.org/) | [**CentOS**](https://www.centos.org/) | [**OpenSUSE**](https://www.opensuse.org/) 
- [**Debian**](https://www.debian.org/) | [**Ubuntu**](https://ubuntu.com/)

### Desktop Environment
- **DankMaterialShell (dms)**: The complete desktop shell with widgets and CLI tools
- **DankMaterialShell (dms-git)**: Development build with latest features

### Compositors
- [**Niri**](https://github.com/niri-wm/niri): Scrollable-tiling Wayland compositor
- [**Niri-git**](https://github.com/niri-wm/niri): Development build of niri

### Core Framework
- [**Quickshell**](https://github.com/quickshell-mirror/quickshell): QtQuick-based Wayland desktop shell framework
- [**Quickshell-git**](https://github.com/quickshell-mirror/quickshell): Development build of Quickshell

### Utilities
- [**cliphist**](https://github.com/sentriz/cliphist): Wayland clipboard manager with history support
- [**dgop**](https://github.com/AvengeMedia/dgop): Stateless CPU/GPU monitor system by Avenge Media
- [**dsearch**](https://github.com/AvengeMedia/danksearch): a Blazingly fast filesystem search tool by Avenge Media
- [**matugen**](https://github.com/InioX/matugen): Material Design 3 color palette generator for themes
- [**xWayland-Satellite**](https://github.com/Supreeeme/xwayland-satellite): XWayland integration tool
- [**xWayland-Satellite-git**](https://github.com/Supreeeme/xwayland-satellite): Development build of xWayland-Satellite

## How to Install

### Installing DankMaterialShell (DMS)

For complete DMS installation instructions including repository setup, see the [DankMaterialShell Installation Guide](../dankmaterialshell/installation).

:::tip[Quick Start]

- **Fedora**: See the [Fedora & CentOS](../dankmaterialshell/installation#fedora--centos) section in the installation guide
- **Ubuntu/Debian**: See the [Ubuntu & Debian](../dankmaterialshell/installation#debian--ubuntu) section in the installation guide
- **OpenSUSE**: See the [OpenSUSE](../dankmaterialshell/installation#opensuse--derivatives) section in the installation guide

:::

### Installing Standalone Packages

All packages in the DankLinux repository can be installed independently. First, add the DankLinux repository for your distribution, then install the packages you need.

:::note

**xWayland-Satellite** is automatically installed as a dependency when installing **niri** or **niri-git**. You don't need to install it separately.

:::

### Debian

**Debian 13 (Trixie)**:

```bash
# Add DankLinux repository
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_13/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_13/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update

# Install stable packages
sudo apt install quickshell niri

# Or install development packages
sudo apt install quickshell-git niri-git
```

**Debian Testing**:

```bash
# Add DankLinux repository
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Testing/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Testing/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update

# Install stable packages
sudo apt install quickshell niri

# Or install development packages
sudo apt install quickshell-git niri-git
```

**Debian Sid**:

```bash
# Add DankLinux repository
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Unstable/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Unstable/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update

# Install stable packages
sudo apt install quickshell niri

# Or install development packages
sudo apt install quickshell-git niri-git
```

### Ubuntu

```bash
# Add DankLinux PPA
sudo add-apt-repository ppa:avengemedia/danklinux
sudo apt update

# Install stable packages
sudo apt install quickshell niri

# Or install development packages
sudo apt install quickshell-git niri-git
```

### OpenSUSE

**OpenSUSE Tumbleweed**:

```bash
# Add DankLinux repository
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Tumbleweed/home:AvengeMedia:danklinux.repo
sudo zypper refresh

# Install stable packages
sudo zypper install quickshell niri

# Or install development packages
sudo zypper install quickshell-git niri-git
```

**OpenSUSE Leap 16**:

```bash
# Add DankLinux repository
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.0/home:AvengeMedia:danklinux.repo
sudo zypper refresh

# Install stable packages
sudo zypper install quickshell niri

# Or install development packages
sudo zypper install quickshell-git niri-git
```

**OpenSUSE Leap 16.1**:

```bash
# Add DankLinux repository
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.1/home:AvengeMedia:danklinux.repo
sudo zypper refresh

# Install stable packages
sudo zypper install quickshell niri

# Or install development packages
sudo zypper install quickshell-git niri-git
```

**OpenSUSE Slowroll**:

```bash
# Add DankLinux repository
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Slowroll/home:AvengeMedia:danklinux.repo
sudo zypper refresh

# Install stable packages
sudo zypper install quickshell niri

# Or install development packages
sudo zypper install quickshell-git niri-git
```

### Fedora & CentOS

The COPR repositories provide packages for Fedora 41/42/43 rawhide and CentOS 10:

```bash
# Add DankLinux COPR
sudo dnf copr enable avengemedia/danklinux

# Install stable packages
sudo dnf install quickshell niri

# Or install development packages
sudo dnf install quickshell-git niri-git
```

:::note

Package availability may vary by distribution. Some packages may only be available on Debian, Ubuntu, and OpenSUSE via OBS/PPA.

:::

### Niri Scrollable-Tiling Wayland Compositor

Niri packages are available in both stable and development variants. Supported on distributions where niri is not available in the official repositories.

**xWayland-Satellite** is automatically installed as a dependency when installing **niri** or **niri-git**, providing XWayland integration out of the box.

[**Wiki**](https://yalter.github.io/niri/) | [**GitHub**](https://github.com/niri-wm/niri)

## Repository Links

### Fedora COPR

The COPR provides packages for Fedora 41/42/43 rawhide and CentOS 10:

- **DankLinux Core Repository**: [avengemedia/danklinux](https://copr.fedorainfracloud.org/coprs/avengemedia/danklinux/)
- **DMS Stable**: [avengemedia/dms](https://copr.fedorainfracloud.org/coprs/avengemedia/dms/)
- **DMS Development**: [avengemedia/dms-git](https://copr.fedorainfracloud.org/coprs/avengemedia/dms-git/)

### Open Build Service (OBS)

The OBS provides packages for OpenSUSE and Debian based distributions:

- **DankLinux Core Repository**: [home:AvengeMedia:danklinux](https://build.opensuse.org/project/show/home:AvengeMedia:danklinux)
- **DMS Stable**: [home:AvengeMedia:dms](https://build.opensuse.org/project/show/home:AvengeMedia:dms)
- **DMS Development**: [home:AvengeMedia:dms-git](https://build.opensuse.org/project/show/home:AvengeMedia:dms-git)

### Launchpad PPA

The Launchpad PPAs provide packages for Ubuntu distributions:

- **AvengeMedia Team Page**: [~avengemedia](https://launchpad.net/~avengemedia)
- **DankLinux Core PPA**: [ppa:avengemedia/danklinux](https://launchpad.net/~avengemedia/+archive/ubuntu/danklinux)
- **DMS Stable PPA**: [ppa:avengemedia/dms](https://launchpad.net/~avengemedia/+archive/ubuntu/dms)
- **DMS Development PPA**: [ppa:avengemedia/dms-git](https://launchpad.net/~avengemedia/+archive/ubuntu/dms-git)

## GitHub Repository

The packaging configurations and build scripts are maintained in the official DankLinux repository:

**Repository**: [github.com/AvengeMedia/DankLinux](https://github.com/AvengeMedia/DankLinux)

:::note

**Official Avenge Media packages**: `dms`, `dms-cli`, `dgop`, `danksearch`, `dank-greeteer`, `dms-color-picker`, and `dms clipboard` are developed and maintained by the Avenge Media team under the MIT License. External packages in these repositories are maintained by Avenge Media, but originate from upstream projects by their respective authors, credited in the package listings. They are considered unofficial Avenge Media packages unless stated otherwise by the project authors.
Packages retain their upstream licenses: Niri (GPL-3.0), Quickshell (LGPL-3.0), Matugen (GPL-2.0), Cliphist (GPL-3.0).

:::

## Support

If you encounter issues with the repositories or packages:

1. Check the [DankMaterialShell Installation Guide](../dankmaterialshell/installation) for common solutions
2. Visit the [Support Page](../support) for community resources
3. Report packaging issues on the [DankLinux Repository](https://github.com/AvengeMedia/DankLinux/issues)
4. Report application issues on the [DankMaterialShell Repository](https://github.com/AvengeMedia/DankMaterialShell/issues)

## Contributing

Interested in maintaining packages for other distributions? Contributions to the DankLinux repository are welcome! Check out the [Contributing Guide](../contributing) to get started.

