versioned_docs/version-1.5/danklinux/index.mdx
---
title: DankLinux Repository
description: Pre-built packages for Fedora, CentOS, Debian, Ubuntu, OpenSUSE, and Void Linux
---

import Hero from '@site/src/components/Hero';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Hero
  asciiArt={`██████╗  █████╗ ███╗   ██╗██╗  ██╗██╗     ██╗███╗   ██╗██╗   ██╗██╗  ██╗
██╔══██╗██╔══██╗████╗  ██║██║ ██╔╝██║     ██║████╗  ██║██║   ██║╚██╗██╔╝
██║  ██║███████║██╔██╗ ██║█████╔╝ ██║     ██║██╔██╗ ██║██║   ██║ ╚███╔╝ 
██║  ██║██╔══██║██║╚██╗██║██╔═██╗ ██║     ██║██║╚██╗██║██║   ██║ ██╔██╗ 
██████╔╝██║  ██║██║ ╚████║██║  ██╗███████╗██║██║ ╚████║╚██████╔╝██╔╝ ██╗
╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝╚══════╝╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚═╝  ╚═╝`}
  hideTitle={true}
/>

## Overview

The **DankLinux Repository** provides pre-built packages for **DankMaterialShell** and **niri**! \
DankMaterialShell is now available on more distributions than ever before!

- [**Fedora**](https://fedoraproject.org/) | [**CentOS**](https://www.centos.org/) | [**OpenSUSE**](https://www.opensuse.org/) 
- [**Debian**](https://www.debian.org/) | [**Ubuntu**](https://ubuntu.com/) | [**Void Linux**](https://voidlinux.org/)

### Desktop Environment
- **DankMaterialShell (dms)**: The complete desktop shell with widgets and CLI tools
- **DankMaterialShell (dms-git)**: Development build with latest features

### Compositors
- [**Niri**](https://github.com/niri-wm/niri): Scrollable-tiling Wayland compositor
- [**Niri-git**](https://github.com/niri-wm/niri): Development build of niri

### Core Framework
- [**Quickshell**](https://github.com/quickshell-mirror/quickshell): QtQuick-based Wayland desktop shell framework — on **Debian**, use the native package (see below); DankLinux builds remain for other distros
- [**Quickshell-git**](https://github.com/quickshell-mirror/quickshell): Development build of Quickshell (DankLinux repositories)

### Utilities
- [**cliphist**](https://github.com/sentriz/cliphist): Wayland clipboard manager with history support
- [**dgop**](https://github.com/AvengeMedia/dgop): Stateless CPU/GPU monitor system by Avenge Media
- [**dsearch**](https://github.com/AvengeMedia/danksearch): a Blazingly fast filesystem search tool by Avenge Media
- [**DankCalendar**](https://github.com/AvengeMedia/dankcalendar) (`dcal`): Standalone calendar app for Local, Google, Microsoft, CalDAV, and iCloud — package **`dankcalendar-git`**
- [**matugen**](https://github.com/InioX/matugen): Material Design 3 color palette generator for themes
- [**xWayland-Satellite**](https://github.com/Supreeeme/xwayland-satellite): XWayland integration tool
- [**xWayland-Satellite-git**](https://github.com/Supreeeme/xwayland-satellite): Development build of xWayland-Satellite

## How to Install

### Installing DankMaterialShell (DMS)

For complete DMS installation instructions including repository setup, see the [DankMaterialShell Installation Guide](../dankmaterialshell/installation).

:::tip[Quick Start]

- **Fedora**: See the [Fedora & CentOS](../dankmaterialshell/installation#fedora--centos) section in the installation guide
- **Ubuntu/Debian**: See the [Ubuntu & Debian](../dankmaterialshell/installation#debian--ubuntu) section in the installation guide
- **OpenSUSE**: See the [OpenSUSE](../dankmaterialshell/installation#opensuse--derivatives) section in the installation guide
- **Void Linux**: See the [Void Linux](../dankmaterialshell/installation#void-linux) section in the installation guide

:::

### Installing Standalone Packages

All packages in the DankLinux repository can be installed independently. First, add the DankLinux repository for your distribution, then install the packages you need.

:::note

**xWayland-Satellite** is automatically installed as a dependency when installing **niri** or **niri-git**. You don't need to install it separately.

:::

### Debian

Stable **quickshell** should come from Debian (trixie-backports on Debian 13; main on testing/sid). The DankLinux OBS `quickshell` package for Debian is **deprecated** and will be removed in the future — migrate with `sudo apt remove quickshell` then install the Debian package below. DankLinux OBS remains for **niri**, **quickshell-git**, and other companions.

Select your release, then choose stable or development packages.

<Tabs groupId="debian-release">
<TabItem value="trixie" label="Debian 13 (Trixie)" default>

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
# Native quickshell from Debian backports
echo "deb http://deb.debian.org/debian trixie-backports main" | \
  sudo tee /etc/apt/sources.list.d/trixie-backports.list
sudo apt update
sudo apt install -t trixie-backports quickshell

# DankLinux OBS for niri and other companions
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_13/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_13/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_13/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_13/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
<TabItem value="testing" label="Debian Testing">

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
# Native quickshell from Debian
sudo apt update
sudo apt install quickshell

# DankLinux OBS for niri and other companions
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Testing/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Testing/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Testing/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Testing/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
<TabItem value="sid" label="Debian Sid">

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
# Native quickshell from Debian
sudo apt update
sudo apt install quickshell

# DankLinux OBS for niri and other companions
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Unstable/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Unstable/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Unstable/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Unstable/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
</Tabs>

### Ubuntu

#### Step 1: Add the DankLinux PPA

```bash
sudo add-apt-repository ppa:avengemedia/danklinux
sudo apt update
```

#### Step 2: Install packages

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
sudo apt install quickshell niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
sudo apt install quickshell-git niri-git
```

</TabItem>
</Tabs>

### Void Linux

:::warning[Repository migration]

If you already use the former GitHub Pages repository, replace its URL in
place before it is retired:

```bash
sudo sed -i 's|https://avengemedia.github.io/DankLinux/current|https://void.danklinux.com/danklinux/current|' /etc/xbps.d/danklinux.conf
```

The frozen GitHub Pages repository no longer receives updates and will be
retired after **July 24, 2026 at 22:27 UTC**.

:::

Add the DankLinux XBPS repository, synchronize it, and install whichever
standalone packages you need:

```bash
echo "repository=https://void.danklinux.com/danklinux/current" | sudo tee /etc/xbps.d/danklinux.conf
sudo xbps-install -S
sudo xbps-install -S dgop danksearch dankcalendar
```

The package names are `dgop`, `danksearch`, and `dankcalendar`; they install
the `dgop`, `dsearch`, and `dcal` commands respectively. To install DMS itself,
also configure the separate repository in the [Void Linux DMS installation
guide](../dankmaterialshell/installation#void-linux).

### OpenSUSE

Select your distribution, then choose stable or development packages.

<Tabs groupId="opensuse-distro">
<TabItem value="tumbleweed" label="Tumbleweed" default>

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Tumbleweed/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Tumbleweed/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
<TabItem value="leap16" label="Leap 16">

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.0/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.0/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
<TabItem value="leap161" label="Leap 16.1">

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.1/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.1/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
<TabItem value="slowroll" label="Slowroll">

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Slowroll/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Slowroll/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install quickshell-git niri-git
```

</TabItem>
</Tabs>

</TabItem>
</Tabs>

### Fedora & CentOS

The COPR repositories provide packages for Fedora 41/42/43 rawhide and CentOS 10.

<Tabs groupId="dms-channel">
<TabItem value="stable" label="Stable Release" default>

```bash
sudo dnf copr enable avengemedia/danklinux
sudo dnf install quickshell niri
```

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
sudo dnf copr enable avengemedia/danklinux
sudo dnf install quickshell-git niri-git
```

</TabItem>
</Tabs>

:::note

Package availability may vary by distribution. Some packages may only be available on Debian, Ubuntu, and OpenSUSE via OBS/PPA.

:::

### Niri Scrollable-Tiling Wayland Compositor

Niri packages are available in both stable and development variants. Supported on distributions where niri is not available in the official repositories.

**xWayland-Satellite** is automatically installed as a dependency when installing **niri** or **niri-git**, providing XWayland integration out of the box.

[**Wiki**](https://yalter.github.io/niri/) | [**GitHub**](https://github.com/niri-wm/niri)

## Repository Links

### Fedora COPR

The COPR provides packages for Fedora 41/42/43 rawhide and CentOS 10:

- **DankLinux Core Repository**: [avengemedia/danklinux](https://copr.fedorainfracloud.org/coprs/avengemedia/danklinux/)
- **DMS Stable**: [avengemedia/dms](https://copr.fedorainfracloud.org/coprs/avengemedia/dms/)
- **DMS Development**: [avengemedia/dms-git](https://copr.fedorainfracloud.org/coprs/avengemedia/dms-git/)

### Open Build Service (OBS)

The OBS provides packages for OpenSUSE and Debian based distributions:

- **DankLinux Core Repository**: [home:AvengeMedia:danklinux](https://build.opensuse.org/project/show/home:AvengeMedia:danklinux)
- **DMS Stable**: [home:AvengeMedia:dms](https://build.opensuse.org/project/show/home:AvengeMedia:dms)
- **DMS Development**: [home:AvengeMedia:dms-git](https://build.opensuse.org/project/show/home:AvengeMedia:dms-git)

### Launchpad PPA

The Launchpad PPAs provide packages for Ubuntu distributions:

- **AvengeMedia Team Page**: [~avengemedia](https://launchpad.net/~avengemedia)
- **DankLinux Core PPA**: [ppa:avengemedia/danklinux](https://launchpad.net/~avengemedia/+archive/ubuntu/danklinux)
- **DMS Stable PPA**: [ppa:avengemedia/dms](https://launchpad.net/~avengemedia/+archive/ubuntu/dms)
- **DMS Development PPA**: [ppa:avengemedia/dms-git](https://launchpad.net/~avengemedia/+archive/ubuntu/dms-git)

## GitHub Repository

The packaging configurations and build scripts are maintained in the official DankLinux repository:

**Repository**: [github.com/AvengeMedia/DankLinux](https://github.com/AvengeMedia/DankLinux)

:::note

**Official Avenge Media packages**: `dms`, `dms-cli`, `dgop`, `danksearch`, `dankcalendar-git`, `dank-greeteer`, `dms-color-picker`, and `dms clipboard` are developed and maintained by the Avenge Media team under the MIT License. External packages in these repositories are maintained by Avenge Media, but originate from upstream projects by their respective authors, credited in the package listings. They are considered unofficial Avenge Media packages unless stated otherwise by the project authors.
Packages retain their upstream licenses: Niri (GPL-3.0), Quickshell (LGPL-3.0), Matugen (GPL-2.0), Cliphist (GPL-3.0).

:::

## Support

If you encounter issues with the repositories or packages:

1. Check the [DankMaterialShell Installation Guide](../dankmaterialshell/installation) for common solutions
2. Visit the [Support Page](../support) for community resources
3. Report packaging issues on the [DankLinux Repository](https://github.com/AvengeMedia/DankLinux/issues)
4. Report application issues on the [DankMaterialShell Repository](https://github.com/AvengeMedia/DankMaterialShell/issues)

## Contributing

Interested in maintaining packages for other distributions? Contributions to the DankLinux repository are welcome! Check out the [Contributing Guide](../contributing) to get started.
